--- a/planty/public/css/style.css
+++ b/planty/public/css/style.css
@@ -8,3 +8,87 @@
     font-weight: 600;
     color: white;
 }
+
+.jumbo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: red; */
+}
+
+.row-jumbo{
+    display: flex;
+    /* background-color: green; */
+    align-items: center;
+    justify-content: center;
+    width: 65rem;
+    height: 25rem;
+}
+
+.jumbo-text{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.jumbo-text h1{
+    color: #122218;
+    font-family: "Poppins", sans-serif;
+    font-size: 3.75rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 105%;
+}
+
+.jumbo-text p{
+    color: #122218;
+    font-family: "DM Sans";
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.jumbo-btn{
+    gap: 1rem;
+}
+
+.card-service{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: "Poppins", sans-serif;
+  border: 0.5px solid var(--tes1, #ADBC9F);
+  border-radius: 15px;
+  background-color: linear-gradient(108deg, rgba(173, 188, 159, 0.30) 10.91%, rgba(79, 86, 73, 0.30) 111.54%);
+  box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
+  width: 20rem;
+  height: 15rem;
+  backdrop-filter: blur(12px);
+
+}
+
+.services{
+    margin-top: 10rem;
+    /* background-color: aqua; */
+    align-items: center;
+    justify-content: center;
+}
+
+.row-services{
+    width: 48rem;
+    height: 33rem;
+    /* background-color: burlywood; */
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+.services-title{
+    color: #122218;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
