--- a/planty/public/css/style.css
+++ b/planty/public/css/style.css
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 10rem;
     /* background-color: red; */
 }
 
@@ -23,6 +24,7 @@
     justify-content: center;
     width: 65rem;
     height: 25rem;
+    gap: 6rem;
 }
 
 .jumbo-text{
@@ -52,43 +54,226 @@
 .jumbo-btn{
     gap: 1rem;
 }
+.jumbo-img{
+    width: 20rem;
+    height: 24rem;
+}
 
 .card-service{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   font-family: "Poppins", sans-serif;
-  border: 0.5px solid var(--tes1, #ADBC9F);
-  border-radius: 15px;
-  background-color: linear-gradient(108deg, rgba(173, 188, 159, 0.30) 10.91%, rgba(79, 86, 73, 0.30) 111.54%);
-  box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
+  
   width: 20rem;
   height: 15rem;
-  backdrop-filter: blur(12px);
+  gap: 1rem;
 
+  border-radius: 0.9375rem;
+border: 1px solid var(--tes1, #ADBC9F);
+background: var(--tes1, linear-gradient(108deg, rgba(173, 188, 159, 0.30) 10.91%, rgba(79, 86, 73, 0.30) 111.54%));
+
+/* tes1 */
+box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
+backdrop-filter: blur(6.099999904632568px);
 }
 
 .services{
-    margin-top: 10rem;
+    margin-top: 20rem;
     /* background-color: aqua; */
     align-items: center;
     justify-content: center;
 }
 
 .row-services{
-    width: 48rem;
-    height: 33rem;
+    /* width: 48rem;
+    height: 33rem; */
     /* background-color: burlywood; */
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 3rem;
 }
-.services-title{
+
+.service-h{
+    width: 20rem;
+  height: 15rem;
+    justify-content: center;
+}
+
+.services-title h3{
     color: #122218;
-    text-align: center;
+    text-align: left;
     font-family: "Poppins", sans-serif;
     font-size: 2rem;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 800;
     line-height: normal;
+}
+
+.services-desc p{
+    color: #122218;
+    font-family: "DM Sans";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.service-text h4{
+    color: #122218;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.service-text p{
+    color: #122218;
+    text-align: center;
+    font-family: "DM Sans";
+    font-size: 0.91rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.why{
+    margin-top: 20rem;
+}
+
+.row-why{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-why{
+    border-radius: 0.9375rem;
+    border: 0.5px solid var(--tes1, #ADBC9F);
+    background: var(--tes1, linear-gradient(108deg, rgba(173, 188, 159, 0.30) 10.91%, rgba(79, 86, 73, 0.30) 111.54%));
+    box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(6.099999904632568px);
+    width: 54rem;
+    height: 29rem;
+    justify-content: center;
+    /* align-items: center; */
+    text-align: left;
+    padding-left: 2rem;
+}
+
+.card-why h2{
+    color: #122218;
+    font-family: "Poppins", sans-serif;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 750;
+    line-height: normal;
+}
+
+.card-why p{
+    color: #122218;
+    font-family: "DM Sans";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.why-img{
+    position: absolute;
+    left: 50%;
+}
+
+.testi{
+    border-top: 0.3px solid var(--tes1, #ADBC9F);
+    background: radial-gradient(154.51% 145.91% at 29.72% -54.98%, #ADBC9F 0%, #838F79 99.99%);
+    box-shadow: 0px -5px 15px 0px rgba(0, 0, 0, 0.29);
+    margin-top: 20rem;
+    height: 40rem;
+    gap: 3rem;
+}
+
+.testi-text{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 0.5rem;
+    padding-top: 3rem;
+}
+
+.testi-text h2{
+    color: #FFF;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.testi-text p{
+    color: #FFF;
+    text-align: center;
+    font-family: "DM Sans";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 36rem;
+}
+
+.testi-card{
+    border-radius: 1.25rem;
+    border: 1.5px solid #FFF;
+    background: linear-gradient(185deg, rgba(255, 255, 255, 0.30) 6.27%, rgba(173, 188, 159, 0.30) 97.12%);
+    box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(6.099999904632568px);
+    width: 19rem;
+    height: 20rem;
+    text-align: center;
+    gap: 1.5rem;
+    /* padding: 1rem; */
+}
+.testi-card img{
+    width: 3.5rem;
+    height: 2.5rem;
+    margin-left: 2rem;
+    margin-top: 1rem;
+}
+
+.testi-card p{
+    width: 16rem;
+    color: #FFF;
+    font-family: "DM Sans";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: left;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+.testi-profile{
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+    margin: 0;
+    padding: 0;
+}
+
+.testi-profile img{
+    width: 2.75rem;
+    height: 2.75rem;
+    margin-left: 2rem;
+    margin-top: 0rem;
+}
+
+.testi-profile-text{
+    gap: 0;
+    margin: 0;
 }
