--- a/planty/public/css/style.css
+++ b/planty/public/css/style.css
@@ -1,10 +1,154 @@
+body {
+    font-family: "Poppins", sans-serif;
+}
+
 .navbar {
-    background-color: #ADBC9F;
+    padding: 0;
+    background-image: linear-gradient(135deg, rgba(173, 188, 159, 0.3), rgba(79, 86, 73, 0.3));
+    box-shadow: 0px 8px 30px 0 rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(12.2px);
+    border-image: linear-gradient(225deg, rgba(173, 188, 159, 0.5), rgba(102, 102, 102, 0.5));
+    border-style: inset;
 }
 
 .nav-link {
-    font-family: "Poppins", sans-serif;;
     font-size: 18px;
     font-weight: 600;
     color: white;
+}
+
+.navbar-brand img {
+    display:block;
+    width: 15%;
+}
+
+.footer {
+    background-color: rgba(18, 34, 24, 1);
+}
+
+.footer-nav-item {
+    font-family: "DM Sans", sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    color: white;
+}
+
+.footer .row ul {
+    list-style: none;
+}
+
+
+.planty-heading-1 {
+    font-size: 48px;
+    font-weight: 800;
+    color: #122218;
+}
+
+.planty-heading-4 {
+    font-size: 20px;
+    font-weight: 600;
+    color: #122218;
+}
+
+.planty-text-content {
+    font-family: "DM Sans", sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    color: #122218;
+}
+
+
+
+/*--------------------------------------------- ABOUT US --------------------------------------------- */
+.about-us {
+    margin-top: 10rem;
+}
+
+.background-gradient {
+    z-index: -1;
+}
+
+.about-us-content {
+    border-radius: 15px;
+    margin-right: 20%;
+    right: 0rem;
+    padding: 2.4rem 2.8rem 4.2rem 2.8rem;
+    border-style: inset;
+    border-width: 1.5px;
+    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3), rgba(97, 130, 100, 0.3));
+    border-image: linear-gradient(to bottom left, rgba(173, 188, 159, 0.5), rgba(255, 255, 255, 0.5));
+    box-shadow: 0px 8px 30px 0 rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(12.2px);
+    top: 8.5rem;
+}
+
+.about-us-image-container {
+    margin-left: 20%;
+}
+
+.about-us-image {
+    box-shadow: 0px 4px 9.7px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    /* margin-left: 5rem; */
+}
+
+.our-values {
+    margin-top: 20rem;
+}
+
+.our-values-list-container {
+    margin-top: 3rem;
+}
+
+.our-values-item-container {
+    /* margin-top: 0; */
+    border-style: inset;
+    border-width: 1.5px;
+    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3), rgba(97, 130, 100, 0.3));
+    border-image: linear-gradient(to bottom left, rgba(173, 188, 159, 0.5), rgba(255, 255, 255, 0.5));
+    box-shadow: 0px 8px 30px 0 rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(12.2px);
+    padding: 1.5rem;
+    border-radius: 15px;
+    /* margin-right: 5%; */
+}
+
+.history {
+    margin-top: 20rem;
+    background-color: color-mix(in srgb, #ADBC9F 100%, white 45%);
+    box-shadow: 0px -4px 10px 0 rgba(0, 0, 0, 0.25), 0px 4px 10px 0 rgba(0, 0, 0, 0.25);
+}
+
+.history-content {
+    margin-right: 25rem;
+}
+
+.our-team {
+    margin-top: 20rem;
+    margin-bottom: 15rem;
+}
+
+.our-team-item-container {
+    border-style: inset;
+    border-width: 1.5px;
+    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3), rgba(97, 130, 100, 0.3));
+    border-image: linear-gradient(to bottom left, rgba(173, 188, 159, 0.5), rgba(255, 255, 255, 0.5));
+    box-shadow: 0px 8px 30px 0 rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(12.2px);
+    padding: 1.5rem;
+    border-radius: 15px;
+    /* margin-right: 2%; */
+}
+
+.our-team-item-container h4{
+    margin: 0;
+    margin-top: 1rem;
+}
+
+.our-team-list-container {
+    margin-top: 3rem;
+}
+
+.footer {
+    padding: 10rem;
 }
