--- a/planty/public/css/style.css
+++ b/planty/public/css/style.css
@@ -3,7 +3,7 @@
 }
 
 .nav-link {
-    font-family: "Poppins", sans-serif;;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 600;
     color: white;
