--- a/planty/public/css/disease.css
+++ b/planty/public/css/disease.css
@@ -4,115 +4,88 @@
     scroll-behavior: smooth;
 }
 
-.container{
-    position: relative;
-}
-
-.title{
-    font-family: "Poppins", sans-serif;
-    font-size: 48px;
-    font-weight: 800;
-}
-
-.sub-title{
-    font-family: "Poppins", sans-serif;
-    font-size: 32px;
-    font-weight: 500;
-}
-
-.card{
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-}
-
-.disease-card{
-    width: 100%;
-    height: 100%;
-    justify-content: space-evenly;
-}
-
 .card-title{
-    max-width: 243px;
-    min-height: 334px;
+    /* max-width: 243px;
+    min-height: 334px; */
+    width: 15.1875rem;
+    height: 20.875rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: "Poppins", sans-serif;
-    font-size: 40px;
-    font-weight: bold;
+    color: #122218;
   
-    /* max-width: 300px;
-    height: 150px; */
-    padding: 35px;
-  
-    border: 0.5px solid var(--tes1, #ADBC9F);
-    border-radius: 15px;
-    background-color: linear-gradient(108deg, rgba(173, 188, 159, 0.30) 10.91%, rgba(79, 86, 73, 0.30) 111.54%);
+    padding: 2rem;
+
+    background: var(
+        --tes1,
+        linear-gradient(
+            108deg,
+            rgba(173, 188, 159, 0.3) 10.91%,
+            rgba(79, 86, 73, 0.3) 111.54%
+        )
+    );
+
+    border: 3px solid var(--tes1, #ADBC9F);
+    border-radius: 0.9375rem;
     box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
-  
-    backdrop-filter: blur(12px);
+    backdrop-filter: blur(6.099999904632568px);
 }
 
-.desc-card{
-    width: 100%;
-    height: 1157px;
-    position: relative;
-    top: 150px;
+.card-title:hover {
+    border-radius: 0.9375rem;
+    border: 3px solid var(--tes1, #ADBC9F);
+    background: url(../assets/desc-card.png) lightgray 50% / cover no-repeat;
+    box-shadow: 0px 8px 20px 0px #FFF;
+    backdrop-filter: blur(6.099999904632568px);
+}
+
+.card-title:hover p{
+    color: white;
 }
 
 .desc-disease-card{
-    /* width: 1246px; */
     width: 100%;
-    height: 451px;
+    height: 28rem;
     position: relative;
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
-}
-
-.desc{
-    width: 598px;
-    height: 451px;
-    position: relative;
-    align-items: center;
-    justify-content: center;
+    margin-bottom: 8rem;
+    gap: 4rem;
 }
 
 .image-disease{
-    width: 246px;
-    height: 451px;
+    width: 15.375rem;
+    height: 28.1875rem;
     position: absolute;
+    z-index: 1;
     left: 0;
-    background-color: #ADBC9F;
+    border-radius: 0.9375rem;
+    border: 3px solid var(--tes1, #ADBC9F);
+    background: url(../assets/desc-card.png) lightgray 50% / cover no-repeat;
+
+    box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(6.099999904632568px);
 }
 
 .desc-disease{
-    max-width: 545px;
-    min-height: 393px;
+    width: 34.0625rem;
+    height: 24.5625rem;
     position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    font-family: "Poppins", sans-serif;
-    font-size: 32px;
-    font-weight: bold;
-  
-    /* max-width: 300px;
-    height: 150px; */
-    padding: 20px 40px 20px 245px;
-  
-    border: 0.5px solid var(--tes1, #ADBC9F);
-    border-radius: 15px;
-    background-color: linear-gradient(108deg, rgba(173, 188, 159, 0.30) 10.91%, rgba(79, 86, 73, 0.30) 111.54%);
+ 
+    border-radius: 0.9375rem;
+    background: var(
+        --tes1, 
+        linear-gradient(
+            108deg, 
+            rgba(173, 188, 159, 0.30) 10.91%, 
+            rgba(79, 86, 73, 0.30) 111.54%
+        )
+    );
+    border: 2px solid var(--tes1, #ADBC9F);
     box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
-  
-    backdrop-filter: blur(12px);
+    backdrop-filter: blur(6.099999904632568px);
 }
 
-.desc-disease p{
-    font-size: 14px;
-    font-weight: 500;
-    align-items: start;
-    padding: 0;
-}
