funfact page, subscription page, style css

--- a/planty/public/css/style.css
+++ b/planty/public/css/style.css
@@ -44,11 +44,15 @@ body {
     color: #122218;
 }
 
-.planty-heading-4 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #122218;
+.planty-heading-1-white {
+    font-size: 48px;
+    font-weight: 800;
+    color: white;
 }
+
+
+
+
 
 .planty-text-content {
     font-family: "DM Sans", sans-serif;
@@ -84,6 +88,8 @@ body {
 
 .about-us-image-container {
     margin-left: 20%;
+    max-width: 673px;
+    max-height: 473px;
 }
 
 .about-us-image {
@@ -801,4 +807,326 @@ backdrop-filter: blur(6.099999904632568px);
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+/*--------------------------------------------- funfact --------------------------------------------- */
+
+.planty-heading-4-subs {
+    font-size: 20px;
+    font-weight: 600;
+    color: #122218;
+}
+
+.background-top-fun {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+}
+
+.fun-heading-2{
+    font-family: "Poppins", sans-serif;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+
+.background-top-fun img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.header-funfact{
+    color: white;
+    text-decoration: white;
+    justify-content: center;
+    margin-top: -5%;
+}
+
+.header-funfact p{
+   margin-left: 15%;
+   margin-top: -10%;
+}
+
+.funfact-image-container{
+    margin-left: 40%;
+    max-width: 673px;
+    max-height: 473px;
+}
+
+.funfact-content {
+    border-radius: 15px;
+    margin-right: 55%;
+    right: 0rem;
+    padding: 2.4rem 2.8rem 4.2rem 2.8rem;
+    border-style: inset;
+    border-width: 1.5px;
+    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3), rgba(97, 130, 100, 0.3));
+    border-image: linear-gradient(to bottom left, rgba(173, 188, 159, 0.5), rgba(255, 255, 255, 0.5));
+    box-shadow: 0px 8px 30px 0 rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(12.2px);
+    top: 8.5rem;
+    width: 30%;
+}
+
+.background-gradient-fun {
+    width: 100%;
+    display: block;
+    height: auto;
+}
+
+.background-gradient-fun {
+    top: 50%; /* Adjust this value as needed to position the gradient */
+}
+
+.benefit {
+    margin-top: 20rem;
+   justify-content: center;
+
+}
+
+.benefit-content {
+    margin-top: 3rem;
+}
+
+.benefit-view{
+    left: 0;
+}
+
+.benefit-title{
+    display: flex;
+    flex-direction: column;
+    left: 0;
+}
+
+.benefit-container{
+    left: 0;
+    right: 0;
+}
+
+.benefit-item-container {
+    /* margin-top: 0; */
+    border-style: inset;
+    border-width: 1.5px;
+    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3), rgba(97, 130, 100, 0.3));
+    border-image: linear-gradient(to bottom left, rgba(173, 188, 159, 0.5), rgba(255, 255, 255, 0.5));
+    box-shadow: 0px 8px 30px 0 rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(12.2px);
+    padding: 1.5rem;
+    border-radius: 15px;
+    margin: 1rem;
+    /* margin-right: 5%; */
+}
+
+.fun-why{
+    margin-top: 5rem;
+}
+.fun-why img{
+
+    max-width: 537.12px;
+    max-height: 412px;
+}
+/*--------------------------------------------- subscription --------------------------------------------- */
+.header-subs{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.plan-content{
+    margin-top: 5rem;
+}
+
+.subscription-plan{
+    display: flex;
+    justify-content: center;
+
+}
+
+.subscription-card-group{
+    gap: 3rem;
+}
+
+.subscription-card {
+    /* margin-top: 0; */
+
+    border-style: inset;
+    border-width: 1.5px;
+    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3), rgba(97, 130, 100, 0.3));
+    border-image: linear-gradient(to bottom left, rgba(173, 188, 159, 0.5), rgba(255, 255, 255, 0.5));
+    box-shadow: 0px 8px 30px 0 rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(12.2px);
+    padding: 1.5rem;
+    border-radius: 15px;
+    margin: 1rem;
+   z-index: 5;
+    /* margin-right: 5%; */
+}
+.card-body-subs{
+      text-align: center;
+
+}
+
+.subscription-title {
+    font-weight: 600;
+    color: #122218;
+    margin-top: 1rem;
+}
+
+.subscription-price{
+    font-weight: 550;
+    font-size: 2.25rem;
+    color: #122218;
+    margin-top: 4rem;
+}
+
+.btn-plan{
+    margin-top: 5rem;
+    padding-bottom: 1rem;
+
+
+}
+
+
+
+.subscription-plan{
+    gap: 3rem;
+}
+
+.plan-information-content{
+    display: flex;
+    justify-content: center;
+    margin-top: -5%;
+
+}
+
+.plan-information-title-1{
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+    /* margin-top: 2rem; */
+}
+
+.plan-information-title-2{
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+    /* margin-top: 5rem; */
+
+}
+
+.subs-list li{
+    list-style: none;
+    padding-left: 0;
+    margin-top: 2rem;
+}
+.subs-list ul{
+    padding-bottom: 3rem;
+}
+
+.plan-information-title-2{
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 0;
+    margin-top: 5rem;
+}
+
+.plan-information-1{
+    background-image: url('/assets/subs/planinfo1.png');
+}
+.plan-information-2{
+background-image: url('/assets/subs/planinfo2.png');
+ }
+
+    .subs-accordion{
+        display: flex;
+        justify-content: center;
+    }
+
+
+    .accordion{
+        width: 75%;
+        border-radius: 15px;
+        margin: 1rem;
+        background: transparent;
+
+    }
+
+
+    .header-accordion{
+        text-align: center;
+        margin-top: 5rem;
+        margin-bottom: 5rem;
+    }
+
+    .accordion-button{
+        background: transparent;
+        outline: none;
+        /* border-radius: 15px !important; */
+        font-weight: 500;
+    }
+
+     .accordion-button:focus{
+       box-shadow: none;
+
+    }
+
+    .accordion-item{
+
+         background: #ADBC9F;
+         /* border: none; */
+         border-radius: 15px !important;
+         margin: 1rem;
+
+    }
+
+    .subs-accordion{
+        padding-bottom: 10rem;
+    }
+
+    .accordion-button:not(.colapsed) {
+        box-shadow: none;
+        /* background:linear-gradient(to bottom right, rgba(255, 255, 255, 0.3) 0%, rgba(97, 130, 100, 0.3) 100%); */
+        /* background: #ADBC9F; */
+
+    }
+
+    .accordion-button::after{
+        background-image: none;
+        content: "\f107";
+        font-family: fontawesome;
+        width: auto;
+        height: auto;
+
+
+
+    }
+    .accordion-button:focus{
+    box-shadow: none;
+    border: 1px solid rgba(0,0,0,0.1);
+}
+
+
+    .accordion-button:not(.colapsed)::after{
+       background-image: none;
+    }
+
+   .accordion-button:not(.collapsed) {
+    background-color: #ADBC9F;
+    /* border-radius: 15px; */
+}
+
+
+.accordion-item:first-of-type>.accordion-header .accordion-button {
+    border-top-right-radius: 15px !important;
+    border-top-left-radius: 15px !important;
+
+}
+
+.accordion-header .accordion-button {
+    border-top-right-radius: 15px !important;
+    border-top-left-radius: 15px !important;
 }
