--- a/planty/public/css/productDetail.css
+++ b/planty/public/css/productDetail.css
@@ -1,12 +1,28 @@
-.container-content{
-    border: 1px solid var(--tes1, #ADBC9F);
-    background: var(--tes1, linear-gradient(108deg, rgba(173, 188, 159, 0.30) 10.91%, rgba(79, 86, 73, 0.30) 111.54%));
+* {
+    padding: 0;
+    margin: 0;
+}
+
+.container-content {
+    border: 1px solid var(--tes1, #adbc9f);
+    background: var(
+        --tes1,
+        linear-gradient(
+            108deg,
+            rgba(173, 188, 159, 0.3) 10.91%,
+            rgba(79, 86, 73, 0.3) 111.54%
+        )
+    );
 }
 
 .description {
     border-radius: 1.25rem;
-    border: 1px solid var(--tes1, #ADBC9F);
-    background: linear-gradient(108deg, rgba(173, 188, 159, 0.30) -19.93%, rgba(255, 255, 255, 0.30) 111.53%);
+    border: 1px solid var(--tes1, #adbc9f);
+    background: linear-gradient(
+        108deg,
+        rgba(173, 188, 159, 0.3) -19.93%,
+        rgba(255, 255, 255, 0.3) 111.53%
+    );
 
     /* tes1 */
     box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
