--- a/planty/public/css/utils.css
+++ b/planty/public/css/utils.css
@@ -4,7 +4,7 @@
     --hijau-gelap: 97, 130, 100;
     --white-background: 255, 255, 255;
     --font: 18, 34, 24;
-    --hitam: 0,0,0;
+    --hitam: 0, 0, 0;
 }
 
 body {
@@ -13,7 +13,11 @@ body {
 
 .navbar {
     padding: 0;
-    background-image: linear-gradient(108deg, rgba(173, 188, 159, 0.30) 10.91%, rgba(79, 86, 73, 0.30) 111.54%);
+    background-image: linear-gradient(
+        108deg,
+        rgba(173, 188, 159, 0.3) 10.91%,
+        rgba(79, 86, 73, 0.3) 111.54%
+    );
     box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(6.099999904632568px);
 }
@@ -31,7 +35,7 @@ body {
 }
 
 .navbar-brand img {
-    display:block;
+    display: block;
     width: 15%;
 }
 
@@ -66,12 +70,12 @@ body {
 
 .credits {
     margin-top: 4rem;
-    border-top: 1px solid #D9D9D9;
+    border-top: 1px solid #d9d9d9;
 }
 
 .planty-heading-1 {
     font-size: 48px;
-    font-weight: 800;
+    font-weight: 700;
     color: #122218;
 }
 
@@ -109,7 +113,7 @@ body {
 
 .planty-text {
     font-family: "DM Sans", sans-serif;
-    font-weight: bold;
-    font-size: 20px;
+    font-weight: 500;
+    font-size: 24px;
     color: #122218;
 }
