--- a/planty/public/css/paymentDetails.css
+++ b/planty/public/css/paymentDetails.css
@@ -17,3 +17,9 @@
     box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(6.099999904632568px);
 }
+
+.form-control {
+    height: 3.3125rem;
+    border-radius: 0.625rem;
+    border: 1px solid #618264;
+}
