--- a/planty/public/css/about_us_style.css
+++ b/planty/public/css/about_us_style.css
@@ -4,11 +4,11 @@ body {
 }
 
 .about-us-page-content .planty-heading-1 {
-    color: rgb(var(--font))
+    color: rgb(var(--font));
 }
 
 .about-us-page-content .planty-text-paragraph {
-    color: rgb(var(--font))
+    color: rgb(var(--font));
 }
 
 /*--------------------------------------------- ABOUT US --------------------------------------------- */
@@ -22,27 +22,33 @@ body {
 
 .about-us-content {
     border-radius: 15px;
-    margin-right: 20%;
-    right: 0rem;
-    padding: 2.4rem 2.8rem 4.2rem 2.8rem;
-    background: linear-gradient(108deg, rgba(var(--white-background), 0.30) 10.91%, rgba(var(--hijau-gelap), 0.30) 111.54%);
+    padding: 2.4rem 4% 3% 4%;
+    background: linear-gradient(
+        108deg,
+        rgba(var(--white-background), 0.3) 10.91%,
+        rgba(var(--hijau-gelap), 0.3) 111.54%
+    );
     box-shadow: 0px 8px 30px 0px rgba(var(--hitam), 0.25);
     backdrop-filter: blur(6.099999904632568px);
-    top: 8.5rem;
+    height: fit-content;
+    margin-left: -3rem;
 }
 
-.about-us-image-container {
-    margin-left: 20%;
+.about-us-content p {
+    text-align: justify;
 }
 
 .about-us-image {
     box-shadow: 0px 4px 9.7px 0 rgba(var(--hitam), 0.25);
     border-radius: 15px;
-    /* margin-left: 5rem; */
+    width: 30%;
+    object-fit: cover;
 }
 
 .our-values {
-    margin-top: 20rem;
+    margin-top: 15rem;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 
 .our-values-list-container {
@@ -50,63 +56,82 @@ body {
 }
 
 .our-values-item-container {
-    /* margin-top: 0; */
     border-radius: 15px;
-    background: linear-gradient(108deg, rgba(var(--white-background), 0.30) 10.91%, rgba(var(--hijau-gelap), 0.30) 111.54%);
+    background: linear-gradient(
+        108deg,
+        rgba(var(--white-background), 0.3) 10.91%,
+        rgba(var(--hijau-gelap), 0.3) 111.54%
+    );
     box-shadow: 0px 8px 30px 0px rgba(var(--hitam), 0.25);
     backdrop-filter: blur(6.099999904632568px);
     padding: 1.5rem;
     transition: 0.5s;
-    /* margin-right: 5%; */
 }
 
 .our-values-item-container:hover {
     border-radius: 15px;
-    background: linear-gradient(180deg, rgba(var(--font), 1.0) 0%, rgba(var(--hijau-gelap), 1.0) 100%);
+    background: linear-gradient(
+        180deg,
+        rgba(var(--font), 1) 0%,
+        rgba(var(--hijau-gelap), 1) 100%
+    );
     box-shadow: 0px 8px 30px 0px #122218;
     backdrop-filter: blur(6.099999904632568px);
-    color: rgba(var(--white-background), 1.0);
+    color: rgba(var(--white-background), 1);
+}
+
+.our-values-item-container img {
+    width: 15%;
 }
 
 .history-container {
-    margin-top: 20rem;
-    background-color: color-mix(in srgb, #ADBC9F 100%, white 45%);
-    box-shadow: 0px -4px 10px 0 rgba(var(--hitam), 0.25), 0px 4px 10px 0 rgba(var(--hitam), 0.25);
+    margin-top: 15rem;
+    background-color: color-mix(in srgb, #adbc9f 100%, white 45%);
+    box-shadow: 0px -4px 10px 0 rgba(var(--hitam), 0.25),
+        0px 4px 10px 0 rgba(var(--hitam), 0.25);
     height: 70vh;
 }
 
 .history-content {
-    padding-right: 10rem;
+    padding-right: 9%;
 }
-
 
 .history-img {
     padding-right: 0;
 }
 
 .our-team {
-    margin-top: 20rem;
+    margin-top: 15rem;
     margin-bottom: 15rem;
+    padding-left: 18%;
+    padding-right: 18%;
 }
 
 .our-team-item-container {
-    background: linear-gradient(108deg, rgba(var(--white-background), 0.30) 10.91%, rgba(var(--hijau-gelap), 0.30) 111.54%);
+    background: linear-gradient(
+        108deg,
+        rgba(var(--white-background), 0.3) 10.91%,
+        rgba(var(--hijau-gelap), 0.3) 111.54%
+    );
     box-shadow: 0px 8px 30px 0px rgba(var(--hitam), 0.25);
     backdrop-filter: blur(6.099999904632568px);
     padding: 1rem;
     border-radius: 15px;
-    transition: 0.5sS;
-    /* margin-right: 2%; */
+    transition: 0.5s;
 }
 
 .our-team-item-container:hover {
     border-radius: 15px;
-    background: linear-gradient(108deg, rgba(var(--white-background), 0.30) 10.91%, rgba(var(--hijau-gelap), 0.30) 111.54%);
-    box-shadow: 0px 8px 30px 0px rgba(var(--white-background), 0.70);
+    background: linear-gradient(
+        108deg,
+        rgba(var(--white-background), 0.3) 10.91%,
+        rgba(var(--hijau-gelap), 0.3) 111.54%
+    );
+    box-shadow: 0px 8px 30px 0px rgba(var(--white-background), 0.7);
     backdrop-filter: blur(6.099999904632568px);
 }
 
-.our-team-item-container h4{
+.our-team-item-container h4 {
     margin: 0;
     margin-top: 1rem;
 }
@@ -117,4 +142,110 @@ body {
 
 .our-team-list-container {
     margin-top: 3rem;
+}
+
+@media (max-width: 992px) {
+    .about-us {
+        flex-direction: column;
+        row-gap: 2rem;
+    }
+
+    .about-us-content {
+        margin-left: 0rem;
+        width: 80%;
+    }
+
+    .about-us-image {
+        width: 80%;
+        height: 80vh;
+    }
+
+    .history-container {
+        flex-direction: row;
+        background-color: transparent;
+        box-shadow: none;
+        height: fit-content;
+    }
+
+    .history-content {
+        width: 100%;
+        background-color: color-mix(in srgb, #adbc9f 100%, white 45%);
+        box-shadow: 0px -4px 10px 0 rgba(var(--hitam), 0.25),
+            0px 4px 10px 0 rgba(var(--hitam), 0.25);
+        padding: 8% 25% 12% 10%;
+    }
+
+    .history-img {
+        width: 100%;
+        height: 70vh !important;
+    }
+}
+
+@media (max-width: 576px) {
+    .our-values {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .our-values-desc {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    .our-values-list-container {
+        overflow: scroll;
+        overflow: auto; /* Enable scrolling within the container */
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+    }
+
+    .our-values-list-container::-webkit-scrollbar {
+        display: none; /* Safari and Chrome */
+    }
+
+    .our-values-list {
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-start !important;
+        padding-bottom: 4rem;
+    }
+
+    .our-values-list > * {
+        width: fit-content;
+    }
+
+    .our-values-box:first-child {
+        margin-left: 1rem !important;
+    }
+
+    .our-team {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .our-team-list-container {
+        overflow: scroll;
+        overflow: auto; /* Enable scrolling within the container */
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+    }
+
+    .our-team-list-container::-webkit-scrollbar {
+        display: none; /* Safari and Chrome */
+    }
+
+    .our-team-list {
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-start !important;
+        padding-bottom: 4rem;
+    }
+
+    .our-team-list > * {
+        width: fit-content;
+    }
+
+    .our-team-box:first-child {
+        margin-left: 1rem !important;
+    }
 }
