--- a/planty/public/css/gallery_style.css
+++ b/planty/public/css/gallery_style.css
@@ -6,6 +6,8 @@ body {
 
 .gallery-container {
     padding-top: 10rem;
+    padding-left: 8%;
+    padding-right: 8%;
 }
 
 .gallery-item-container {
@@ -13,23 +15,13 @@ body {
     justify-content: center;
     text-align: center;
     margin-bottom: 7rem;
-    margin-left: 10rem;
-    margin-right: 10rem;
-}
-
-.gallery-item-container .col .row{
-    display: flex;
-    text-align: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    row-gap: 3rem;
 }
 
 .gallery-item-container .img-desc {
     top: 0;
     padding: 10% 5% 5% 5%;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     color: white;
     background-color: rgba(var(--hitam), 0.75);
     border-radius: 6px;
@@ -37,19 +29,50 @@ body {
     opacity: 0;
 }
 
+.gallery-item {
+    border: none;
+}
+
+.gallery-item.card {
+    background-color: transparent;
+}
+
 .img-desc:hover {
     opacity: 1;
 }
 
 .img-container {
-    border: 2px solid #ADBC9F;
+    border: 2px solid #adbc9f;
     border-radius: 7.5px;
     box-shadow: 0px 8px 30px 0px rgba(var(--hitam), 0.25);
     backdrop-filter: blur(6.099999904632568px);
-    width: 95%;
+    text-overflow: ellipsis;
+    overflow: auto; /* Enable scrolling within the container */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+.img-container::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
 }
 
 .img-container img {
     border-radius: 7.5px;
     width: 100%;
+}
+
+@media (max-width: 992px) {
+    .gallery-item-container h1 {
+        font-size: 36px;
+    }
+
+    .gallery-item-container p {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 576px) {
+    .gallery-item-container .img-desc {
+        height: fit-content;
+    }
 }
