--- a/planty/public/css/utils.css
+++ b/planty/public/css/utils.css
@@ -201,5 +201,56 @@ body {
 }
 
 @media (max-width: 576px) {
+}
 
+.primaryBtn {
+    display: inline-flex;
+    border: none;
+    height: 3.125rem;
+    padding: 0.625rem 1.25rem;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.625rem;
+    background: #618264;
+    color: #fff;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.primaryBtn:hover {
+    border: 2px solid var(--tes1, #adbc9f);
+    color: #618264;
+    background: #fff;
+    box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(6.099999904632568px);
+}
+
+.secondaryBtn {
+    display: inline-flex;
+    border: none;
+    height: 3.125rem;
+    padding: 0.625rem 1.25rem;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.625rem;
+    background: #adbc9f;
+    color: #122218;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.secondaryBtn:hover {
+    border: 2px solid var(--tes1, #adbc9f);
+    color: #adbc9f;
+    background: #122218;
+    box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(6.099999904632568px);
 }
