donts on-click switch section

--- a/planty/public/css/donts.css
+++ b/planty/public/css/donts.css
@@ -81,3 +81,11 @@
     box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(6.099999904632568px);
 }
+
+.section-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* Atau sesuaikan dengan kebutuhan */
+}
