--- a/planty/public/css/style.css
+++ b/planty/public/css/style.css
@@ -26,6 +26,7 @@
 .content {
     position: relative;
     z-index: 1;
+
 }
 
 .fun-heading-2{
@@ -134,6 +135,10 @@
     max-height: 412px;
 }
 /*--------------------------------------------- subscription --------------------------------------------- */
+.subscription-container {
+    padding-top: 10rem;
+}
+
 .header-subs{
     display: flex;
     justify-content: center;
