--- a/planty/public/css/utils.css
+++ b/planty/public/css/utils.css
@@ -56,6 +56,10 @@ body {
     font-size: 14px;
 }
 
+.nav-item.profile {
+    display: none;
+}
+
 .footer {
     background-color: rgba(var(--font), 1);
     padding: 7%;
